--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react-dom": "^18.0.0",
+    "ahooks": "^3.7.7",
     "antd": "^5.5.2",
+    "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-compat": "^4.1.4",
     "eslint-plugin-unicorn": "^47.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "typescript-eslint-parser": "^22.0.0",
     "web-vitals": "^2.1.0"
